# process-healer

./: .gitee-ci.yml  .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  config.yaml
healer/: Cargo.toml  build.rs
healer-common/: Cargo.toml
healer-common/src/: lib.rs
healer-ebpf/: Cargo.toml
healer-ebpf/src/: main.rs
healer/src/: config.rs  config_manager.rs  coordinator.rs  core_logic.rs  daemon_handler.rs  event_bus.rs  lib.rs  logger.rs  main.rs  monitor.rs  monitor_manager.rs  publisher.rs  service_manager.rs  signal_handler.rs  subscriber.rs  utils.rs
healer/src/coordinator/: dependency_coordinator.rs
healer/src/monitor/: ebpf_monitor.rs  network_monitor.rs  pid_monitor.rs
healer/src/subscriber/: process_healer.rs
healer/tests/: coordinator.rs  ebpf_e2e.rs  hot_reload.rs  monitor_reconcile.rs  process_e2e.rs
healer/tests/fixtures/: test_process.rs
packaging/rpm/: healer.spec
packaging/systemd/: healer.service
scripts/: build-rpm.sh
simple_test_process/: Cargo.toml  init.sh
simple_test_process/src/: main.rs
tests/fixtures/: dummy_service.py  test_process_ebpf.rs
