[package]
name = "healer-ebpf"
version = "0.1.0"
edition = "2021"
license = "MulanPSL-2.0"
authors = ["XqiLiu"]
description = "eBPF programs for healer daemon monitoring"
repository = "https://github.com/XqiLiu/healer"
homepage = "https://github.com/XqiLiu/healer"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
healer-common = { path = "../healer-common" }

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }


[[bin]]
name = "healer"
path = "src/main.rs"
required-features = ["build-ebpf"]

[features]
# 默认构建 eBPF 二进制
default = ["build-ebpf"]
build-ebpf = []
